fixing the dashboard

--- a/views/admin/availableStock.ejs
+++ b/views/admin/availableStock.ejs
@@ -11,7 +11,7 @@
 <body>
   <div class="overlay">
     <div class="container">
-      <a href="/dashboard" class="btn btn-warning mb-3">⬅ Back to Dashboard</a>
+     <a href="/admin/dashboard" class="btn btn-warning my-3">⬅ Back to Dashboard</a>
       <h2 class="text-center mb-4">Available Stock - Category Wise</h2>
 
       <div class="table-responsive mb-4">
