--- a/views/admin/seller.ejs
+++ b/views/admin/seller.ejs
@@ -11,6 +11,8 @@
 
 <body>
   <div class="overlay">
+         <a href="/admin/dashboard" class="btn btn-warning my-3">⬅ Back to Dashboard</a>
+
     <div class="container py-4">
       <h2 class="mb-4">Seller List</h2>
 
