--- a/views/admin/sellerdeals.ejs
+++ b/views/admin/sellerdeals.ejs
@@ -12,6 +12,8 @@
 </head>
 <body>
 <div class="container py-5">
+       <a href="/admin/dashboard" class="btn btn-warning my-3">⬅ Back to Dashboard</a>
+
   <h2 class="mb-4">📦 Manage Stocks</h2>
 
   <div id="product-list" class="row">
