--- a/views/admin/sellerdeals.ejs
+++ b/views/admin/sellerdeals.ejs
@@ -24,7 +24,9 @@
       <div class="card p-3 mb-4">
         <img src="<%= product.imageUrl %>" class="card-img-top rounded" alt="<%= product.deviceName %>" />
         <div class="card-body">
-          <h5 class="card-title"><%= product.deviceName %></h5>
+          <h5 class="card-title"><%= product.brand %> &nbsp;<%= product.deviceName %></h5>
+          <h5 class="mb-3 text-muted">Total Available Count: <%= totalAvailableCount %></h5>
+
           <p>
             Brand: <%= product.brand %><br />
             Variant: <%= product.variant %><br />
