--- a/views/buyer/deals.ejs
+++ b/views/buyer/deals.ejs
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="/css/buyer/deals.css" />
 </head>
 <body>
+
+  <%- include('../partials/navbar') %> 
   <div class="container">
     <h2 class="mb-4 text-primary">🔥 Hot Deals</h2>
     <div class="row" id="deals-list">
