--- a/views/buyer/payment.ejs
+++ b/views/buyer/payment.ejs
@@ -8,6 +8,7 @@
   <link href="/css/buyer/paymentHistory.css" rel="stylesheet" />
 </head>
 <body>
+  <%- include('../partials/navbar') %> 
   <div class="container">
     <h2 class="mb-4">💰 Payment History</h2>
 
