--- a/views/buyer/ofd.ejs
+++ b/views/buyer/ofd.ejs
@@ -8,6 +8,8 @@
   <link href="/css/buyer/outForDelivery.css" rel="stylesheet" />
 </head>
 <body>
+
+  <%- include('../partials/navbar') %> 
 <div class="container py-5">
   <h2 class="mb-4">🚚 Out for Delivery</h2>
 
