--- a/views/buyer/orders.ejs
+++ b/views/buyer/orders.ejs
@@ -8,6 +8,8 @@
   <link href="/css/buyer/myorders.css" rel="stylesheet" />
 </head>
 <body>
+
+  <%- include('../partials/navbar') %> 
 <div class="container py-5">
   <h2 class="mb-4">📦 My Orders</h2>
 
