--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -8,14 +8,18 @@
   <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
   <!-- Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="/css/utils/navbar.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark py-3">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">
-      <img src="https://cdn-icons-png.flaticon.com/512/893/893257.png" alt="Logo" class="brand-logo">
-      GBSTORE
+  <img src="/images/logo.png" alt="Logo" class="brand-logo" style="height: 35px;">
+  GBSTORE
+</a>
+
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
       <span class="navbar-toggler-icon"></span>
