--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -44,7 +44,7 @@
 </li>
             <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Settings</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/auth/logout"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
+            <li><a class="dropdown-item" href="/auth/buyer/logout"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
           </ul>
         </li>
       </ul>
