--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -15,7 +15,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark py-3">
   <div class="container-fluid">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="/buyer/dashboard/<%= currentUser._id %>">
   <img src="/images/logo.png" alt="Logo" class="brand-logo" style="height: 35px;">
   GBSTORE
 </a>
