--- a/public/css/admin/availableStock.css
+++ b/public/css/admin/availableStock.css
@@ -1,13 +1,9 @@
-    body {
-      background-image: url('https://images.unsplash.com/photo-1581091012184-5c8f3ec8464b');
-      background-size: cover;
-      background-attachment: fixed;
-      background-repeat: no-repeat;
-      color: white;
+  
+    .text-center{
+      color:  #343a40;
     }
-
     .overlay {
-      background-color: rgba(0, 0, 0, 0.75);
+     
       min-height: 100vh;
       padding: 30px;
     }
