--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,58 +1,84 @@
+<%
+  const currentUserId = 
+    (typeof currentUser !== 'undefined' && currentUser._id) ||
+    (typeof buyer !== 'undefined' && buyer._id) ||
+    (typeof dashboardData !== 'undefined' && dashboardData._id);
+%>
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>GBSTORE</title>
-  <!-- Bootstrap 5 CDN -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-  <!-- Icons -->
+
+  <!-- Bootstrap Icons & Fonts -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 
+  <!-- Custom Navbar CSS -->
   <link rel="stylesheet" href="/css/utils/navbar.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark py-3">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="/buyer/dashboard/<%= currentUser._id %>">
-  <img src="/images/logo.png" alt="Logo" class="brand-logo" style="height: 35px;">
-  GBSTORE
-</a>
+  <nav class="navbar navbar-expand-lg navbar-dark shadow-sm py-3">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="/buyer/dashboard/<%= currentUserId %>">
+        <img src="/images/logo.png" alt="Logo" class="brand-logo" style="height: 35px;"> GBSTORE
+      </a>
 
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
-      <ul class="navbar-nav align-items-center">
-        <li class="nav-item me-3">
-          <a href="/buyer/out-for-delivery" class="nav-link ofd-button">ofd</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown">
-            <img src="https://i.pravatar.cc/300" alt="Profile" class="profile-img me-2">
-            <span class="d-none d-lg-inline">Profile</span>
-          </a>
-          <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
-<li>
-<% let currentUser = buyer || dashboardData; %>
-<a class="dropdown-item" href="/buyer/<%= currentUser._id %>/profile">
-  <i class="bi bi-person"></i> My Account
-</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-</li>
-            <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Settings</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="/auth/buyer/logout"><i class="bi bi-box-arrow-right"></i> Logout</a></li>
-          </ul>
-        </li>
-      </ul>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarContent">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item me-3">
+            <a href="/buyer/out-for-delivery" class="nav-link">
+              <i class="bi bi-truck"></i> OFD
+            </a>
+          </li>
+          <li class="nav-item me-3">
+            <a href="https://wa.me/91xxxxxxxxxx" target="_blank" class="nav-link">
+              <i class="bi bi-whatsapp"></i> WhatsApp
+            </a>
+          </li>
+          <li class="nav-item me-3">
+            <a href="https://t.me/yourtelegramchannel" target="_blank" class="nav-link">
+              <i class="bi bi-telegram"></i> Telegram
+            </a>
+          </li>
+          <li class="nav-item me-3">
+            <a href="https://www.youtube.com/@yourchannel" target="_blank" class="nav-link">
+              <i class="bi bi-youtube"></i> YouTube
+            </a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown">
+              <img src="https://i.pravatar.cc/300" alt="Profile" class="profile-img me-2 rounded-circle" style="height: 32px; width: 32px;">
+              <span class="d-none d-lg-inline">Profile</span>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+              <li>
+                <a class="dropdown-item" href="#">
+                  <i class="bi bi-person"></i> My Account
+                </a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="#"><i class="bi bi-gear"></i> Settings</a>
+              </li>
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <a class="dropdown-item" href="/auth/buyer/logout">
+                  <i class="bi bi-box-arrow-right"></i> Logout
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<!-- Bootstrap JS Bundle -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap Bundle JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
