23rd june night

--- a/views/admin/ofd.ejs
+++ b/views/admin/ofd.ejs
@@ -8,7 +8,7 @@
 
 <body>
 
-  <%- include('../partials/head', { title: "Gyanibaba Store Dashboard" }) %>
+  <%- include('../partials/adminNavbar') %>
   <div class="container py-4">
          <a href="/admin/dashboard" class="btn btn-warning my-3">⬅ Back to Dashboard</a>
 
